--- a/client/src/assets/i18n/es.json
+++ b/client/src/assets/i18n/es.json
@@ -3,5 +3,8 @@
     "tickets": "Billetes",
     "english": "Inglés",
     "spanish": "Español",
-    "language": "Idioma"
+    "language": "Idioma",
+    "date": "Fecha",
+    "correct_date": "Fecha correcta",
+    "required_date": "Fecha requerida"
 }
