--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -3,5 +3,8 @@
     "tickets": "Tickets",
     "english": "English",
     "spanish": "Spanish",
-    "language": "Language"
+    "language": "Language",
+    "date": "Date",
+    "correct_date": "Correct date",
+    "required_date": "Date required"
 }
